syntax = "proto3";

package sfc_identity;

option csharp_namespace = "SFC.Identity.Contracts.Messages.User.Find.Filters";

message GetUsersFilter
{
}